--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/mhk107/netcom-common#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "mssql": "^6.2.0"
   }
 }
